# ShMixer

./: CMakeLists.txt  README.md  ShMixer_ru_RU.ts  devicevolumecontrol.cpp  devicevolumecontrol.h  main.cpp  shmixer.cpp  shmixer.h  shmixer.ui  volumecontrol.cpp  volumecontrol.h  volumecontrol.ui
windowsAudio/: audiosession.cpp  audiosession.h  device.cpp  device.h  processcatcher.cpp  processcatcher.h
windowsAudio/interfaces/: audionotificationinterface.cpp  audionotificationinterface.h  endpointnotificationinterface.cpp  endpointnotificationinterface.h  sessionnotificationinterface.cpp  sessionnotificationinterface.h
windowsAudio/structs/: deviceinfo.cpp  deviceinfo.h  sessioninfo.cpp  sessioninfo.h
